# linux_cpu_temp_ui

./: .gitignore  README.md  main.py  pyproject.toml
linux_cpu_temp_ui/: fonts.py  image_engine.py  logger.py  system.py
