[tool.poetry]
name = "linux-cpu-temp-ui"
version = "0.1.0"
description = ""
authors = ["Victor Ciurana <admin@victorciurana.com>"]
readme = "README.md"
packages = [{include = "linux_cpu_temp_ui"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
